--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Header + Navbar + Dropdown -->
         <header class="header">
           <div class="brand">
-            <img src="assets/imgs/Logo_01.png" alt="logo_01">
+            <img src="assets/imgs/Logo_01.png" href="index.html" alt="logo_01">
             <button class="menu-toggle" aria-label="Abrir menu">
               <i class="fa-solid fa-bars"></i>
             </button>
