--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <!-- Header + Navbar + Dropdown -->
         <header class="header">
           <div class="brand">
-            <img src="assets/imgs/Logo_01.png" href="index.html" alt="logo_01">
+            <img src="assets/imgs/Logo_01.png" href="index.html" alt="Logo da Universidade (Unisantos)">
             <button class="menu-toggle" aria-label="Abrir menu">
               <i class="fa-solid fa-bars"></i>
             </button>
             <nav class="nav" aria-label="principal">
               <div class="nav-item">
-                <a href="https://unisantos.br" target="_blank">Universidade</a>
+                <a href="https://unisantos.br" target="_blank">Site da Universidade</a>
               </div>
               <div class="nav-item">Tema<i class="fa-solid fa-chevron-down chev"></i>
               <div class="dropdown" role="menu">
